bk_ida/gobmkida/c3/approxlib
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/approxlib/src/engine/board.c:2322:25: error: use of undeclared identifier 'dword_A9019C'
if ( byte_9C689F[v8] || dword_A9019C[v8] == v9 ) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/approxlib/src/engine/board.c:2322:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v8] || dword_A9019C[v8] == v9 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/approxlib/src/engine/board.c:2324:24: error: use of undeclared identifier 'byte_9C689F'
if ( ( unsigned __int8)byte_9C689F[v8] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/approxlib/src/engine/board.c:2369:1: error: use of undeclared identifier 'dword_A9019C'
dword_A9019C[v8] = v9; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/approxlib/src/engine/board.c:2372:6: error: use of undeclared identifier 'byte_9C688C'
if ( byte_9C688C[v8] || string_number[v8 + 384] == v9 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/approxlib/src/engine/board.c:2374:24: error: use of undeclared identifier 'byte_9C688C'
if ( ( unsigned __int8)byte_9C688C[v8] == color ) 
                       ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/approxlib/src/obj/1/board.o] Error 1
